--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,13 +43,11 @@ jobs:
           export NEW_VERSION=$(semver bump ${{ env.RELEASE }} $CURRENT)
           echo "VERSION=$NEW_VERSION" >> $GITHUB_ENV
       - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup git
-        run: |
-          git config user.email "developers@messagebird.com"
-          git config user.name "MessageBird CI"
-          git fetch
-          git checkout ${{ github.event.pull_request.head.ref }}
+        uses: actions/checkout@v3
+      - name: Checkout PR
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh pr checkout ${{ github.event.pull_request.number }}
       - name: Prepare CHANGELOG
         run: |
           echo "${{ github.event.pull_request.body }}" | csplit -s - "/##/"
@@ -57,7 +55,7 @@ jobs:
           ## ${{ env.VERSION }}
           " >> CHANGELOG.tmp
           grep "^*" xx01 >> CHANGELOG.tmp
-          test -f CHANGELOG.md && grep -v "^# " CHANGELOG.md >> CHANGELOG.tmp
+          grep -v "^# " CHANGELOG.md >> CHANGELOG.tmp
           cp CHANGELOG.tmp CHANGELOG.md
       - name: Prepare version.py
         run: |
@@ -67,4 +65,6 @@ jobs:
           git add CHANGELOG.md messagebird/version.py
           git commit -m "Bump to version ${{ env.VERSION }}"
       - name: Push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: git push
